tests/snapshots/structure__bin__fail__package_lib_target.snap
---
source: tests/structure.rs
expression: output
snapshot_kind: text
---
COMMAND:
structure
--bin
foobar

STDERR:
Error: No binary target found with name "foobar".

Targets present in package:
- package_lib_target (--lib)


STDOUT:
