tests/snapshots/structure__bin__fail__virtual_workspace_single_package_lib_target.snap
---
source: tests/structure.rs
expression: output
---
STDERR:
Error: No binary target found with name "foobar".

Targets present in package:
- package_lib_target (--lib)


STDOUT:
