tests/snapshots/structure__bin__fail__workspace_multi_package.snap
---
source: tests/structure.rs
expression: output
---
CMD:
structure
--bin
foobar

STDERR:
Error: Multiple packages present in workspace,
please explicitly select one via --package flag.

Packages present in workspace:
- workspace_multi_package
- package_bin_target
- package_lib_target
- package_multi_target


STDOUT:
