tests/snapshots/structure__bin__fail__workspace_single_package_lib_target.snap
---
source: tests/structure.rs
expression: output
---
COMMAND:
structure
--bin
foobar

STDERR:
Error: No binary target found with name "foobar".

Targets present in package:
- package_lib_target (--lib)


STDOUT:
